--- a/pom.xml
+++ b/pom.xml
@@ -9,28 +9,14 @@
 	</properties>
 	<repositories>
 		<repository>
-			<id>jsweet-central</id>
-			<name>libs-release</name>
-			<url>http://repository.jsweet.org/artifactory/libs-release-local</url>
-		</repository>
-		<repository>
-			<snapshots />
-			<id>jsweet-snapshots</id>
-			<name>libs-snapshot</name>
-			<url>http://repository.jsweet.org/artifactory/libs-snapshot-local</url>
+			<id>ktbyte-repo</id>
+			<url>https://mavenrepo.ktbyte.com/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
-			<id>jsweet-plugins-release</id>
-			<name>plugins-release</name>
-			<url>http://repository.jsweet.org/artifactory/plugins-release-local</url>
-		</pluginRepository>
-		<pluginRepository>
-			<snapshots />
-			<id>jsweet-plugins-snapshots</id>
-			<name>plugins-snapshot</name>
-			<url>http://repository.jsweet.org/artifactory/plugins-snapshot-local</url>
+			<id>ktbyte-repo</id>
+			<url>https://mavenrepo.ktbyte.com/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<build>
@@ -53,7 +39,7 @@
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
-				<version>2.0.0-SNAPSHOT</version>
+				<version>2.2.0-SNAPSHOT</version>
 				<configuration>
 					<verbose>true</verbose>
 					<removeJavaDependencies>true</removeJavaDependencies>
@@ -62,8 +48,11 @@
 					<bundle>true</bundle>
 					<declaration>true</declaration>
 					<outDir>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</outDir>
-					<dtsOut>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</dtsOut>
+					<!-- <dtsOut>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</dtsOut> -->
 					<targetVersion>ES3</targetVersion>
+					<ignoredProblems>
+						<ignoredProblem>MAPPED_TSC_ERROR</ignoredProblem>
+					  </ignoredProblems>
 				</configuration>
 				<executions>
 					<execution>
@@ -87,9 +76,9 @@
 								<copy
 									file="src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}/bundle.js"
 									tofile="dist/${project.artifactId}.js" verbose="true" />
-								<copy
-									file="src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}/bundle.d.ts"
-									tofile="dist/${project.artifactId}.d.ts" verbose="true" />
+								<!-- <copy
+									file="target/ts/bundle.ts"
+									tofile="dist/${project.artifactId}.d.ts" verbose="true" /> -->
 							</target>
 						</configuration>
 						<goals>
@@ -154,25 +143,8 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.jsweet.candies.j4ts</groupId>
-			<artifactId>j4ts-awtgeom</artifactId>
-			<version>1.8.132-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 
-	<distributionManagement>
-		<repository>
-			<id>jsweet-release</id>
-			<name>libs-release</name>
-			<url>http://repository.jsweet.org/artifactory/libs-release-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>jsweet-snapshots</id>
-			<name>libs-snapshot</name>
-			<url>http://repository.jsweet.org/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
 	<organization>
 		<name>JSweet</name>
 		<url>http://www.jsweet.org</url>
